# kero_shmup

./: Cargo.toml  game_config.ron
assets/: CREDITS.TXT
assets/levels/: PlatformerTest.ldtk  simple_test.ldtk
src/: audio.rs  hierarchy.rs  ldtk.rs  ldtk_json.rs  lib.rs  main.rs  physics.rs  player.rs
