[package]
name = "kero_shmup"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
kero = { version = "0.1.0", git = "https://github.com/feyworks/kero" }
env_logger = "0.11.8"
hecs = "0.11.0"
serde = "1.0"
serde_json = "1.0"

rapier2d = { version = "*", features = ["parallel"] }

[profile.dev.package.rapier2d]
opt-level = 3