[package]
name = "kero_shmup"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
kero = { version = "0.1.0", git = "https://github.com/feyworks/kero" }
env_logger = "0.11.8"
hecs = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ron = "0.12"
cpal = "0.17"
oddio = "0.7"
hound = "3.5"
symphonia = "0.5"

glamx = { version = "0.1", features = ["bytemuck", "mint", "serde"] }

rapier2d = { version = "*", features = ["parallel"] }

[profile.dev.package.rapier2d]
opt-level = 3